# ChangeLog for media-libs/netpbm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.290 2015/04/29 01:58:49 vapier Exp $

  29 Apr 2015; Mike Frysinger <vapier@gentoo.org> netpbm-10.66.00.ebuild:
  Mark arm/arm64/s390/sh stable #544404.

  29 Apr 2015; Mike Frysinger <vapier@gentoo.org>
  files/netpbm-10.66-wordaccess_be_aligned.patch, netpbm-10.66.00.ebuild:
  Add metadata from upstream svn to the patch #547252 by Jack Morgan.

  28 Apr 2015; Jack Morgan <jmorgan@gentoo.org> netpbm-10.66.00.ebuild,
  +files/netpbm-10.66-wordaccess_be_aligned.patch:
  adding patch to fix sparc failures wrt bz #547252

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for ia64, wrt bug #544404

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for alpha, wrt bug #544404

  01 Apr 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for sparc, wrt bug #544404

  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for ppc64, wrt bug #544404

  30 Mar 2015; Jeroen Roovers <jer@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for HPPA (bug #544404).

  28 Mar 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for ppc, wrt bug #544404

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for x86, wrt bug #544404

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> netpbm-10.66.00.ebuild:
  Stable for amd64, wrt bug #544404

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> netpbm-10.66.00.ebuild:
  add arm64 support, tested on A53 board

  29 Jan 2015; Michał Górny <mgorny@gentoo.org> netpbm-10.66.00.ebuild:
  Switch to CPU_FLAGS_X86.

  02 Jan 2015; Mike Frysinger <vapier@gentoo.org> netpbm-10.66.00.ebuild:
  Do not run jbig-roundtrip test when USE=-jbig #532350 by eroen.

  04 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org>