@@ -17,23 +17,23 @@ DIST netpbm-10.51.00-libpng-1.5.patch.bz2 8120 SHA256 260a5f0e9834e7e1aa5c2dcc29
 DIST netpbm-10.51.00.tar.xz 1834148 SHA256 6d7bb30d1d0e7f6a23b55c6f03bbb20b539909ad84281dc944b1072656dc1d0e SHA512 07b621bfebbd051a80eff09886bc2b3b4f82b01fa9087d6a76ed70a042493b69fb3295d471640a4576101ba19352a57eadf69c5721d9cc416d25ff563ee07c76 WHIRLPOOL 25cbfbdd575fe1c032ce1bb700181175b1386d481990e516ce62d953b1d37091c32ca2016c487d4963af1b8c79ec04953e59181334d2a53b9d5701acedabdf2a
 DIST netpbm-10.66.00.tar.xz 2575356 SHA256 7fe94f38e139be194e9e384e8d9c9747f2fe08c18295bba93c55a41c5bbf63fc SHA512 44348eb1155353d5cd5a2ce025bc6d9301cc3239acea6b68418c14432f4bd61fc5a8669bb51b3e86b96abaf5b02cc20115c662e40fa5b41aee202b0c2ae605af WHIRLPOOL fa937fccd2da9068a268d6a5729c8093baacc3025ab2382902611dadab985247fdacf3433f6e15407b081478b93b772237c41363f37340ea6c93c169357dd0cf
 EBUILD netpbm-10.51.00-r2.ebuild 4876 SHA256 64ba1ded0af46f473325f4331d9c2f0bd4a01b01d2a9b13cfbd10100f6716cf1 SHA512 8a8a70195e352b5c975a74f060c6d412c781f4162aa00746c71e803bbb95c95c0487d1394b72099b52fd5b03cabb3fc13726b283905aad20028372d0f3e08537 WHIRLPOOL ad468b638a5d9ba18bf753a7cd69d1cacced523ec1ae0bece3f040f388cc1681ce40bfdb2f1109b8d5f6585eeb72a475685d78084891d8a56dd6da02ed829ba0
-EBUILD netpbm-10.66.00.ebuild 5606 SHA256 8494317e20227b9dcd6e136c992d3b8eeea21b5bd5b5d24eb9cc404fa46f827c SHA512 6022f0b2a42182c181afec026b427eb30d9b0ba67a50c24a4961396cf27e556900c5a4854182787e57ee2f67da36b5357f81cdd31bb8b53eccd2ee82847a1966 WHIRLPOOL 7c263024308d9093d985351061c5cdb205f58cb359f4aea90052912d8472a5c1aec985c255d35ce1594de6c8835ca1e0031ba7f0aa9727a21f60e20f3256339c
-MISC ChangeLog 40818 SHA256 f3fbbcdffebca6e1009dc3359595d7adcd3da7e1763ede889f9914da87d2b253 SHA512 37472c5e672a5000f6192c83c6f756401024727057980cb4feb158e2578748e5047d6c1616e82cdd4fad5ec6d639d297abbc0b55fce711462ddef183e47d8d58 WHIRLPOOL 68b51a1a352d7c25a3b8f454be15a0078e03b4d6922a4263da39eebcc1c5c406cb6c87220be1c880ef8fddd79b7ee2762f3cf8307c93288b23fbae34d28e6450
+EBUILD netpbm-10.66.00.ebuild 5751 SHA256 72a7de874b63ffd99b50dac4509259dac135e2c0780bc566e834b341bc68ec44 SHA512 aacd7095ec5505cd4ef1f91bc4efb36dde14e254363246f2bbeecf5fd13dba34530c202d658fc00b73faa31824207f348df2523555878d918ad35097e336f8d4 WHIRLPOOL 1cb2e39487e83ceab1810e74367533b212a8a3446b841445b4605143987edc0b19ba6b62889b9fc9fdf0d53216c4e773ec323d67300076a942e50533d2869d1b
+MISC ChangeLog 40979 SHA256 54d31c63bc9323ecb54145079f612c030b090f3d986d68e069baf9e1cfa28292 SHA512 00370c15e2ff01758eab1e856aa26b1167e495fd7c68b49de0bb197707022cc6460aadbb7b8c9e5316b2de0ec213815dc54a956da1ded97c555edb5f1f869e9a WHIRLPOOL 0b6e96f93576b8debdea66493a7b41f09eb2e1387d3f79517eebb6cf6fbbe8bdbb62612bf7b5f097f6c4c95fcde939b405aa9c22287c7c07d1e20386550a409d
 MISC metadata.xml 261 SHA256 e04079912e263782a8c0e4f115e49ff3694535ff2efef7b7fff85cf8d100102b SHA512 e7bcb8f689bd7da37e414a3f33b125d52a5ec0d376e821edd58d352ffb502098fbe8b7d24c0eb073822e41a55c280f84558ca4314dd37ac20adcf6471bd712af WHIRLPOOL 9aa2223d48bacfa917affeb56dc180becb54fc612e69ce6d26496d45cc42fd1050e2a40c77957ee7f37b3e2665adc0c95f08b60fab1787d3292905f0a4c8092a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVQDraAAoJEPGu1DbS6WIABKYP/RknugVD07dFdAizsmIeR/my
-++2o5WhX9jqh65c9NM688YBpStdCg6x26u4MMv3nE8dvV2BJBsxIC7wXSk9ZFjeI
-McEJAPTgsKhPjmWdNIB/2KoV1iKf7zSkYjUZLVCD7QKDnVAw2GUlle6ed1YBXo0B
-S/SK0+jRbv+JppGOIs2OJGJwuCiSxAaprs/SZFPuQNv/NEcPpPQ8Bg64mopFeX3T
-u9qlbXakx3qEq84hMGshUJeeJgOjLUd27V4+Nc77nbtmcohu080TvcIrYDg7in4c
-MajtuueJtp4HSnvm5hTnPlOWZPJrdwR9ls7HK1tMWd9Ho9tjwXU5yMjisFWkHHLE
-0xOhtPqyiRldYm+2WV3XZKwY7ZNHBprdf57TZQ54F6umJg9d/S45GCZrgDID7es8
-Oe8UIR3897OTeYUBrNep31nbsuHAXHRxnixhhkn66E52S6Xup2ZnrySukeUIEBTk
-G7tBH7z87tkAfId+BCiRWBAY5ecFEr6Ltv2K4lud3DgjvHiax34rrxMsN8m4DQ/c
-/QLQUeLJarSSrjxhe9lAIcRmBf8TJyGdSz9zOn4hjZqIRV3NxYKn+3jrYamD5RC4
-Q5IymH8W13KHSg/Pwa66l/x+k4LBT/sS7txF4PgWW1tvnptjAUx6JnYn9V4ogSTE
-dQ6n6aH19x4Q8CUrZYUX
-=+FkJ
+iQIcBAEBCAAGBQJVQFdnAAoJEPGu1DbS6WIAAD8P+gLJ/CoWJuCuaG7VDkD/dWoR
+5HmBYuDWQba4ta+2yjUNvKsTbJkl7rhklVst3t/x3RYZCOiVRMdIOeJCAwPgo8Bq
+E/8wDj6rZoalhzH2u8gXKvbUin+/isYd9jpr3w6O3XCyEso6w4pCNQa96rw9nU/M
+DmV86VGZsym1vL5PoGMWWqrBIT9QOpRxRlYZvrY5oK9rZFi7E1iyYcPBowWEZyjk
+ESUOaLuyO8FjyP3AcsE9KebR/Zjo0BFDEz2G3bTptIGUU/JHCq6OPY01tEHYcjgQ
+kcqVJEcx8OM16Hwu8C4Pl/avWaIxsXvf+vvbCWP143taBOhuM/XdCEQrNER4EAIE
+JdaH7tqeRjT7TGKcTYQXTsErKKbKvo/ep40R0cOpWdm2gvDxMf/l618nk81sqBu0
+iPjAaklv1AbahXgmiL14CIM133tKG+aYNggzWI/TcYnC48DVnj3r7u/W9sEjM1Kf
+JJhm8G5wycwq1AWY1FrUN53bKcO+LxUamuJDV8RC2YpdPNRqtogk3AoIkSwJg2To
+bTqbTc+l6Mggyc4KNP0XP5xNVRaCr7Up+ikejV3IiFij4NE4MlL0wMhfEdksm3Ip
+t/AYoj7Q8ACiaIV9ekdR/77WArRsGipEqnDOcOWZE2N7K0WmBo8zKeKxGFHNHWH1
+YqGjdzrai9NGj4BlT0VT
+=qgN/
 -----END PGP SIGNATURE-----
