@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.290 2015/04/29 01:58:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.291 2015/04/29 04:00:38 vapier Exp $
+
+  29 Apr 2015; Mike Frysinger <vapier@gentoo.org> netpbm-10.66.00.ebuild:
+  Handle test failures when USE=-tiff and USE=-jpeg2k #545418 by Jonathan
+  Lovelace.
 
   29 Apr 2015; Mike Frysinger <vapier@gentoo.org> netpbm-10.66.00.ebuild:
   Mark arm/arm64/s390/sh stable #544404.
